# octopack

./: README.md  __init__.py  __main__.py  cli.py  detect.py  dockerfile.py  pyproject.toml
